updating with heading and list

--- a/index.html
+++ b/index.html
@@ -5,5 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My first webpage</title>
   </head>
-  <body></body>
+  <body>
+    <h1>All about Me.</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem sed
+      earum sit! Minus, esse laboriosam.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, quo?
+    </p>
+    <h2>My Fine Hobbies</h2>
+    <ul>
+      <li>Playing music</li>
+      <li>Gaming</li>
+      <li>Futsal</li>
+      <li>Badminton</li>
+    </ul>
+    <h2>How to make a glass of coffee</h2>
+    <ol>
+      <li>2 spoons of sugar</li>
+      <li>1 spoon of coffee</li>
+      <li>pour hot water</li>
+      <li>mix</li>
+    </ol>
+  </body>
 </html>
